...
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/canchaimg1"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/no_image" />

            <ImageView
                android:id="@+id/canchaimg2"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginEnd="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/no_image" />

            <ImageView
                android:id="@+id/canchaimg3"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/no_image" />
...
            android:layout_weight="1"
            android:text="Características"
            android:textColor="#000"
            android:textSize="18dp" />

        <Button
            android:id="@+id/buttonreservar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
...
